# MotoBoard

./: .gitignore  build.bat  check.bat  clean.bat  generate-keys.bat  generate-keys.ps1  index.html  install.bat  package-lock.json  package.json  release.bat  release.ps1  run.bat  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/src/: main.rs
