[package]
name = "motoboard"
version = "1.0.11"
description = "A gaming soundboard with neon glow UI"
authors = ["MotoBoard"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "process-relaunch", "updater", "global-shortcut-all", "dialog-save", "dialog-open", "fs-all", "path-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = { version = "0.17", features = ["mp3", "wav", "vorbis", "flac"] }
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
